test-tf-azure/azure-nsg-011.tf
resource "azurerm_network_security_group" "wiz-test-nsg-011-mssql" {
  name                = "wiz-sar-test-nsg-011-mssql"
  location            = var.region
  resource_group_name = azurerm_resource_group.nsg-rg.name

  security_rule {
    name                       = "AllowAllInboundMSSQLTrafficFromTheInternet"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "1433"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
